--- a/photobooth/defaults.cfg
+++ b/photobooth/defaults.cfg
@@ -26,6 +26,10 @@ enable = False
 exit_pin = 24
 # BOARD pin 16 (BCM pin 23) triggers capturing pictures
 trigger_pin = 23
+# BOARD pin 16 (BCM pin 23) printer capturing pictures
+print_pin = 27
+# BOARD pin 16 (BCM pin 23) restart capturing pictures
+trigger_pin = 22
 # BOARD pin 7 (BCM pin 4) switches the lamp on and off
 lamp_pin = 4
 # BOARD pin  (BCM pin 17) switches the blue channel
